--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -8,7 +8,7 @@
     \begin{defn}
         A \ii{category} $\bb{C}$ consists of three ingerdients:\\
         a class of \ii{objects} $Obj(\bb{C})$; sets of \ii{morphisms}
-        $Hom(A,B)$ for every ordered pair $(A,B) \in Obj(\bb{C})$; a composition $Hom(A,B) \times Hom(B,C) \to Hom(A,C)$, denoted
+        $Hom(A,B)$ for every ordered pair $(A,B) \in Obj(\bb{C}) \times Obj(\bb{C})$; a composition $Hom(A,B) \times Hom(B,C) \to Hom(A,C)$, denoted
         by $(f,g) \mapsto f \circ g$ for every $A,B,C \in Obj(\bb{C})$, satisfying the following axioms:
         \begin{enumerate}[(i)]
             \item the family of $Hom(A,B)$ is pairwise disjoint,
