--- a/tesi/sections/1/4.tex
+++ b/tesi/sections/1/4.tex
@@ -57,7 +57,8 @@
     \end{defn}
 
     It is easy to notice that our definitions lead to the restatement of the equivalent of the generalized Stokes' theorem on simplicial complexes
-    according to the integration previously defined, i.e. $(d\bra{\sigma})\ket{\tau} = \braket{\sigma}{\del\tau}$.
+    according to the integration previously defined, i.e. $(d\bra{\sigma})\ket{\tau} = \braket{\sigma}{\del\tau}$. One can therefore think of the coboundary
+    operator as a discrete exterior derivative acting on cochains.
    
     % \begin{thm}
     %     $H_p \simeq H^p$
