--- a/tesi/sections/1/5.tex
+++ b/tesi/sections/1/5.tex
@@ -54,7 +54,7 @@
         \[ ker\del^\dagger_{p+1} \cap ker\del_p \subset ker\Delta_p,\] less trivial is the opposite inclusion:
         \[ \del^\dagger_{p+1}\sigma \in im\del^\dagger_{p+1},\sigma \in ker\Delta_p \implies \del^\dagger_{p+1}\sigma \in ker\del_{p+1} = (im\del^\dagger_{p+1})^\perp,\]
         \[ \del_p\sigma \in im\del_p,\sigma \in ker\Delta_p \implies \del_p\sigma \in ker\del^\dagger_p= (im\del_p)^\perp,\]
-        \[ \del_p\sigma = \del^\dagger_{p+1}\sigma \subset im\del^\dagger_{p+1} \cap (im\del^\dagger_{p+1})^\perp = im\del_p \cap (im\del_p)^\perp = 0,\]
+        \[ \del_p\sigma = \del^\dagger_{p+1}\sigma \in im\del^\dagger_{p+1} \cap (im\del^\dagger_{p+1})^\perp = im\del_p \cap (im\del_p)^\perp = 0,\]
         therefore $ker\del^\dagger_{p+1} \cap ker\del_p \subset ker\Delta_p$. Finally we notice that
         \[ ker\Delta_p = ker\del^\dagger_{p+1} \cap ker\del_p = (im\del_{p+1})^\perp \cap ker\del_p \simeq H_p.\]
     \end{proof}
