--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -4,15 +4,19 @@
     \begin{section}{Category Theory}
         \subfile{sections/1/1}   
     \end{section}
+    \newpage
     \begin{section}{Simplicial Complexes} 
         \subfile{sections/1/2}    
     \end{section}
+    \newpage
     \begin{section}{Simplicial Homology}
         \subfile{sections/1/3}    
     \end{section}
+    \newpage
     \begin{section}{Simplicial Cohomology}
         \subfile{sections/1/4} 
     \end{section}
+    \newpage
     \begin{section}{Laplacian Operators}
         \subfile{sections/1/5}
     \end{section}
