--- a/tesi/sections/1/4.tex
+++ b/tesi/sections/1/4.tex
@@ -1,77 +1,62 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
 
-    In order to define data on simplicial complexes we are interested in studying the dual of the simplicial chain complex
-    which we shall call a  simplicial cochain complex. The cochain complex is the image of the chain complex via a special functor,
-    i.e. the dual contravariant functor.
-
-    \begin{defn}
-        Let \bb{V} be the category of vector spaces and linear transformations between them, we define the \ii{dual
-        contravariant functor} by
-        \[ V \in Obj(\bb{V}) \mapsto V^* := Hom(V,\R) \in Obj(\bb{V}) \]
-        \[ \del \in Hom(U,V) \mapsto \del^* \in Hom(V^*,U^*) : \del^*(\phi)=\phi \circ \del . \]
-    \end{defn}
-
-    By applying this functor to the spaces of simplicial chains we are able to define the space of simplicial cochains, 
-    and their respective coboundary operator.
+    An important role in the definition of a convolution on simplicial complexes is played by the Laplaciano operator,
+    especially by its eigenfunctions and spectrum.
     
     \begin{defn}
-        Let $C_p$ be the space of simplicial p-chains, we define the space of \ii{simplicial cochains} to 
-        be $C^p := Hom(C_p, \R)$, i.e. the dual space of $C_p$.
+        We define the \ii{p-Laplacian} operator to be 
+        \[ \Delta_p = \del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p =: \Delta^+_p + \Delta^-_p.\]
     \end{defn}
 
-    \begin{defn}
-        By means of the dual functor we are able to define the dual of the boundary operator which we shall call
-        \ii{coboundary operator}, which is defined to be 
-        \[ d_{p+1} : C^p \to C^{p+1} \quad d_p(\sigma^*) = \sigma^* \circ \del_{p+1} .\]
-    \end{defn}
+    The Laplacian operator is defined to be self-adjoint and positive definite.
 
-    One could also show that the property $d^2 = 0$ is verified in the so defined cochain complex.
-    The homology group could in general be define for any chain complex, in particulare for the simplicial cochain
-    complex it takes the name of cohomology group.
+    \begin{prop}
+        $\Delta^\dagger_p = \Delta_p.$
+    \end{prop}
+    \begin{proof}
+        Let $\ket{\sigma}, \ket{\tau} \in C_p$ 
+        \[ \braket{\sigma}{\Delta_p\tau}=\braket{\sigma}{(\del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p)\tau} = \]
+        \[ = \braket{(\del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p)^\dagger\sigma}{\tau} = \]
+        \[ = \braket{(\del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p)\sigma}{\tau} = \braket{\Delta_p\sigma}{\tau}. \]
+    \end{proof}
 
-    \begin{defn}
-        We define the \ii{p-cohomology group} to be 
-        \[H^p := \frac{ker d_{p+1}}{im d_{p}},\] 
-        where $im d_{p-1}$ is the group of simplicial p-cocycles and
-        $ker d_p$ is the group of simplicial p-coboundaries.
-    \end{defn}
+    According to the spectral theorem there exists a basis of eigenchains of the Laplacian, and since all $\Delta_p, \Delta^+_p, \Delta^-_p$
+    are self-adjoint we can say that they all admit a basis of eigenchains.
 
-    To have a mirrored intuition of what the coboundary operator actually does we equipe our simplicial chain spaces with
-    an inner product. This finite dimensional Hilbert space structure shall allow us to represent the action of a cochain $\sigma^*$ on the chain $\tau$ 
-    as the scalar product $\scal{\sigma}{\tau}$.
+    \begin{prop}
+        Let $\Delta_p\ket{\sigma} = \lambda_\sigma\ket{\sigma}$ then $\lambda_\sigma \geq 0$.
+    \end{prop}
+    \begin{proof}
+        Let $\Delta^+_p\ket{\sigma} = \lambda^+_\sigma \ket{\sigma}$, we see that
+        \[ \braket{\sigma}{\Delta^+_p\sigma} = \braket{\del^\dagger_{p+1}\sigma}{\del^\dagger_{p+1}\sigma} \geq 0 \]
+        \[ \braket{\sigma}{\Delta^+_p\sigma} = \lambda^+_\sigma\braket{\sigma}{\sigma} \geq 0 \implies \lambda+_\sigma \geq 0.\]
+        Let then $\Delta^-_p\ket{\sigma} = \lambda^-_\sigma \ket{\sigma}$, we see that
+        \[ \braket{\sigma}{\Delta^-_p\sigma} = \braket{\del_p\sigma}{\del_p\sigma} \geq 0 \]
+        \[ \braket{\sigma}{\Delta^-_p\sigma} = \lambda^-_\sigma\braket{\sigma}{\sigma} \geq 0 \implies \lambda-_\sigma \geq 0.\]
+        Furthermore, since $\Delta^+_p\Delta^-_p = \Delta^-_p\Delta^+_p = 0$ we have that $[\Delta^+_p,\Delta^-_p] = 0$, thence
+        $[\Delta_p, \Delta^\pm_p] = 0$, therefore $\Delta_p, \Delta^+_p, \Delta^-_p$ share a basis of eigenchains.
+        Let $\ket{\sigma}$ be in that common basis then $\Delta_p\ket{\sigma} = \lambda_\sigma\ket{\sigma}$, where
+        $\lambda_\sigma = \lambda^+_\sigma + \lambda^-_\sigma \geq 0$.
+    \end{proof}
 
-    \begin{defn}
-        We define the scalar product called \ii{integration} $\langle, \rangle : C_p \times C_p \to \R$ on the canonical basis of $C_p$ to be 
-        \[ \langle i, j \rangle = \delta_{ij} ,\] 
-        where $i,j$ are any two p-simplexes in the canonical basis of $C_p$ and $\delta_{ij}$ is the Kronecker Delta.
-    \end{defn}
-    It is convenient, from now on,  to write cochains $\sigma^*$ as bra vectors $\bra{\sigma}$, chains $\sigma$ as ket vectors $\ket{\sigma}$,
-    and the scalar product $\scal{i}{j}$ as the bra-ket product $\braket{i}{j}$.
+    Another really interesting property that was first proven by Beno Eckmann in 1944, is that the kernel of the p-Laplacian
+    is isomorphic to the p-homology group.
 
-    The same Hilbert space structure allows us to represent the coboundary operator $d$ in the space of chains with its integral kernel $\del^\dagger$.
-
-    \begin{defn}
-        Let $d_{p+1} : C^p \to C^{p+1}$ be the coboundary operator, then for any $\sigma^* \in C^p, \tau \in C_{p+1}$ we can define its dual representation $\del^\dagger_{p+1}$ by
-        \[ (d_{p+1} \sigma^*)(\tau) = (d_{p+1} \bra{\sigma})\ket{\tau} = \braket{\del^\dagger_{p+1} \sigma}{\tau}. \]
-    \end{defn}
-
-    It is easy to notice that our definitions lead to the restatement of the equivalent of the generalized Stokes' theorem on simplicial complexes
-    according to the integration previously defined, i.e. $(d\bra{\sigma})\ket{\tau} = \braket{\sigma}{\del\tau}$. One can therefore think of the coboundary
-    operator as a discrete exterior derivative acting on cochains.
-   
-    % \begin{thm}
-    %     $H_p \simeq H^p$
-    % \end{thm}
-    % \begin{proof}
-    %     Let $A_p, A_{p+1}$ be the real matrices associated to the boundary operators $\del_p, \del_{p+1}$ on the canonical basis of p-simplexes,
-    %     then we have that since $\langle \sigma, A_{p+1} \tau \rangle = \langle \sigma, A^\dagger_{p+1} \tau \rangle$ also have that
-    %     \[ H_p =: \frac{ker\del_p}{im\del_{p+1}} = \frac{kerA_p}{imA_{p+1}},\]
-    %     \[ H^p =: \frac{kerd_{p+1}}{imd_p} = \]
-    %     Let's now write the dimensional equations for $A_p, A_{p+1}$,
-    %     \[ n_{p+1} := dim(C_{p+1}) = dim(imA_{p+1}) + dim(kerA_{p+1}) \]
-    %     \[ n_p := dim(C_p) = dim(imA_p) + dim(kerA_p) \]
-    %     \[ dim(H_p) = n_p - dim(imA_p) - (n_{p+1}-dim(kerA_{p+1})) \]
-    % \end{proof}
+    \begin{thm}
+        $ker\Delta_p \simeq H_p$.
+    \end{thm}
+    \begin{proof}
+        We have \[ \Delta_p = \del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p =: \Delta^+_p + \Delta^-_p.\]
+        According to Theorem 1.29 it is true that
+        \[  \Delta^+_p\Delta-_p = \Delta^-_p\Delta^+_p = 0\implies ker\Delta^{\pm}_p \subset im\Delta^{\mp}_p.\]
+        It is trivial to see that since $ker\Delta_p = ker\Delta^+_p \cap ker\Delta^-_p $
+        \[ ker\del^\dagger_{p+1} \cap ker\del_p \subset ker\Delta_p,\] less trivial is the opposite inclusion:
+        \[ \del^\dagger_{p+1}\sigma \in im\del^\dagger_{p+1},\sigma \in ker\Delta_p \implies \del^\dagger_{p+1}\sigma \in ker\del_{p+1} = (im\del^\dagger_{p+1})^\perp,\]
+        \[ \del_p\sigma \in im\del_p,\sigma \in ker\Delta_p \implies \del_p\sigma \in ker\del^\dagger_p= (im\del_p)^\perp,\]
+        \[ \del_p\sigma = \del^\dagger_{p+1}\sigma \in im\del^\dagger_{p+1} \cap (im\del^\dagger_{p+1})^\perp = im\del_p \cap (im\del_p)^\perp = 0,\]
+        therefore $ker\del^\dagger_{p+1} \cap ker\del_p \subset ker\Delta_p$. Finally we notice that
+        \[ ker\Delta_p = ker\del^\dagger_{p+1} \cap ker\del_p = (im\del_{p+1})^\perp \cap ker\del_p \simeq H_p.\]
+    \end{proof}
 
 \end{document}
