--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -7,12 +7,18 @@
 }
 
 @book{hatcher,
-      author = {Hatcher, Allen},
-      title = {Algebraic Topology},
-      publisher = {Cambridge Univ. Press},
-      year = {2000},
+    author = {Hatcher, Allen},
+    title = {Algebraic Topology},
+    publisher = {Cambridge Univ. Press},
+    year = {2000},
 }
 
+@book{singerthorpe,
+    author = { I. M. Singer and J. A. Thorpe},
+    title = {Lecture Notes on Elementary Topology and Geometry},
+    publisher = {Springer, New York, NY},
+    year = {1976}
+}      
 
 @misc{simplicialNN,
     title = {Simplicial Neural Networks}, 
@@ -24,4 +30,10 @@
     title = {Discrete Exterior Calculus}, 
     author = {M. Desbrun and A. N. Hirani and M. Leok and J. E. Marsden},
     year = {2005}
+}
+
+@misc{laplacian,
+    title = {Spectra of combinatorial Laplace operators on simplicial complexes}, 
+    author = {Danijela Horak and Juergen Jost},
+    year={2011}
 }
