--- a/tesi/sections/1/2.tex
+++ b/tesi/sections/1/2.tex
@@ -4,14 +4,14 @@
 
     An important field in algebraic topology is homology theory. We shall discuss homology theory to the extent
     that allows us to define the laplacian operator on simplicial complexes, for further readings see \cite{hatcher}.
-    Firstly we want to equip our simplicial complexes with an orientation.
+    First we want to equip our simplicial complexes with an orientation.
 
     \begin{defn}
         An \ii{oriented} simplicial complex $\mc{A}$ is a simplicial complex and a partial order on $Vert(\mc{A})$ whose
         restriction to the vertices of any simplex in $\mc{A}$ is a linear order.
     \end{defn}
 
-    Secondly we define on the simplicial complex a vector space structure.
+    Then we define on the simplicial complex a vector space structure.
 
     \begin{defn}
         Let $\mc{A}$ be an oriented simplicial complex, on $\mc{A}$ we define a formal sum in order
