--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -62,6 +62,7 @@
 \newcommand{\del}{\partial}
 \newcommand{\then}{\Rightarrow}
 \newcommand{\hull}[1]{\langle #1 \rangle}
+\newcommand{\m}{\text{-}}
 
 \begin{document}
     \begin{titlepage}
