--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -62,8 +62,11 @@
             therefore (i) is proven.
             \item $[\sigma] \subset C$.\\
             If all but one the $\lambda_i$ are zero certaintly $\sum_{i \in I} \lambda_i x_i \in C$, since $C$ contains all the vertexes.
-            The inuctive hypothesis, by relabeling, is that if the first n $\lambda_i$ are non-zero, hence not even $1$, then $\sum_{i \in I} \lambda_i x_i \in C$.
-            \item $\sum_{i \in I} \lambda_i x_i = \sum_{i \in I} \mu_i x_i \then \lambda_i = \mu_i \forall i \in I$
+            The inuctive hypothesis, by relabeling, is that if the first $\lambda_0,...,\lambda_{n-1}$ are non-zero, hence not even $1$, then $\sum_{i \in I} \lambda_i x_i \in C$.
+            We want to show that whenever $\lambda_0,...,\lambda_n$ are non-zero then also $\sum_{i \in I} \lambda_i x_i \in C$, since $\lambda_n \neq 0$ we have that
+            \[ \sum_{i \in I} \lambda_i x_i =  \sum_{i = 0}^n \lambda_i x_i = \lamda_n x_n + \sum_{i = 0}^{n-1} \lambda_i x_i = \]
+            \[ = \lamda_n x_n + (1 - \lambda_n) \sum_{i = 0}^{n-1} \frac{\lambda_i}{1 - \lambda_n} x_i \]
+            \item $\sum_{i \in I} \lambda_i x_i = \sum_{i \in I} \mu_i x_i \then \lambda_i = \mu_i \forall i \in I$.\\
         \end{enumerate}
     \end{proof}
 
