--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -18,7 +18,16 @@
     title = {Lecture Notes on Elementary Topology and Geometry},
     publisher = {Springer, New York, NY},
     year = {1976}
-}      
+} 
+
+@book{comptop,
+  author = {Edelsbrunner, Herbert and Harer, John},
+  publisher = {American Mathematical Society},
+  title = {Computational Topology - an Introduction.},
+  year = 2010
+}
+
+
 
 @misc{simplicialNN,
     title = {Simplicial Neural Networks}, 
