--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -97,9 +97,11 @@
     \end{chapter}
     \begin{appendices}
         \begin{chapter}{Category Theory}
+            \label{app:A}
             \subfile{sections/appendixA/main}
         \end{chapter}
         \begin{chapter}{Construction of Simplicial Complexes from Point Clouds}
+            \label{app:B}
             Cech, Alpha and Delauney complexes.
             Nerve Theorem.
         \end{chapter}
