--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -59,26 +59,37 @@
             and $\sum_{i \in I} a_i = \sum_{i \in I} b_i = 1$. For $t \in [0,1]$
             \[ ta+(1-t)b = t\sum_{i \in I} a_i x_i + (1-t) \sum_{i \in I} b_i x_i = \sum_{i \in I} (ta_i + (1-t)b_i)x_i.\]
             It follows that $ta_i + (1-t)b_i \geq 0$ and $\sum_{i \in I} (ta_i + (1-t)b_i) = t\sum_{i \in I}a_i + (1-t)\sum_{i \in I}b_i = 1$ for all $i \in I$,
-            therefore (i) is proven.
+            which proves our statement.
+
             \item $[\sigma] \subset C$.\\
             If all but one the $\lambda_i$ are zero certaintly $\sum_{i \in I} \lambda_i x_i \in C$, since $C$ contains all the vertexes.
             The inuctive hypothesis, by relabeling, is that if the first $\lambda_0,...,\lambda_{n-1}$ are non-zero, hence not even $1$, then $\sum_{i \in I} \lambda_i x_i \in C$.
             We want to show that whenever $\lambda_0,...,\lambda_n$ are non-zero then also $\sum_{i \in I} \lambda_i x_i \in C$, since $\lambda_n \neq 0$ we have that
-            \[ \sum_{i \in I} \lambda_i x_i =  \sum_{i = 0}^n \lambda_i x_i = \lamda_n x_n + \sum_{i = 0}^{n-1} \lambda_i x_i = \]
-            \[ = \lamda_n x_n + (1 - \lambda_n) \sum_{i = 0}^{n-1} \frac{\lambda_i}{1 - \lambda_n} x_i \]
+            \[ \sum_{i \in I} \lambda_i x_i =  \sum_{i = 0}^n \lambda_i x_i = \lambda_n x_n + \sum_{i = 0}^{n-1} \lambda_i x_i =
+               \lambda_n x_n + (1 - \lambda_n) \sum_{i = 0}^{n-1} \frac{\lambda_i}{1 - \lambda_n} x_i.\]
+            Since $\sum_{i = 0}^{n-1} \frac{\lambda_i}{1 - \lambda_n} = 1$, for the inductive hypothesis $\sum_{i = 0}^{n-1} \frac{\lambda_i}{1 - \lambda_n} x_i \in C$.
+            Also the vertex $x_n$ is contained in $C$ by definition, therefore, being $C$ convex and $\lambda_n \in [0,1]$, it follows that 
+            \[ \lambda_n x_n + (1 - \lambda_n) \sum_{i = 0}^{n-1} \frac{\lambda_i}{1 - \lambda_n} x_i \in C. \]
+            Accordingly $\sum_{i \in I} \lambda_i x_i \in C$, by induction we conclude the proof.
+
             \item $\sum_{i \in I} \lambda_i x_i = \sum_{i \in I} \mu_i x_i \then \lambda_i = \mu_i \forall i \in I$.\\
+            Let $\sum_{i \in I} \lambda_i x_i = \sum_{i \in I} \mu_i x_i$, then also $x_0\sum_{i \in I} \lambda_i + \sum_{i \in I} \lambda_i(x_i-x_0) = 
+            x_0\sum_{i \in I} \mu_i +\sum_{i \in I} \mu_i (x_i - x_0)$, and since both $\lambda_i$ and $\mu_i$ are normalised we have that
+            \[ \sum_{i \in I} (\lambda_i - \mu_i) (x_0 - x_i) = \sum_{i \in I \m \{0\}} (\lambda_i - \mu_i) (x_0 - x_i) = 0 \then \lambda_i = \mu_i \quad \forall i \in I \m \{0\},\]
+            because of the affine independence. \qedhere
+
         \end{enumerate}
     \end{proof}
 
     A proof of theorem \ref{thm:1} can be found in \cite{singerthorpe}.
     The set $[\sigma]$ is often called \ii{covex hull} of $\sigma$.
     
-    \begin{exa}
-        Let ${A,B,C,D} \subset \R^n$ representing the four vertxes of a square and let $A,D$ be opposite vertxes, one can easily see that 
-        \[ D = A + (B-A) + (C-A) = (-1)A + (1)B + (1)C + (0)D = (0)A + (0)B + (0)C + (1)D \, ,\]
-        therefore $A,B,C,D$ are not affinely independent.
-        In fact the $4$ vertexes of a square are coplanar, i.e. they belong to the same $2$ dimensional affine space.
-    \end{exa}
+    % \begin{exa}
+    %     Let ${A,B,C,D} \subset \R^n$ representing the four vertxes of a square and let $A,D$ be opposite vertxes, one can easily see that 
+    %     \[ D = A + (B-A) + (C-A) = (-1)A + (1)B + (1)C + (0)D = (0)A + (0)B + (0)C + (1)D \, ,\]
+    %     therefore $A,B,C,D$ are not affinely independent.
+    %     In fact the $4$ vertexes of a square are coplanar, i.e. they belong to the same $2$ dimensional affine space.
+    % \end{exa}
 
     % image
 
@@ -174,29 +185,53 @@
 
     % Notice that there is no obvious functor from $\bb{Top}$ to $\bb{G}$, therefore the implications reguarding equivalences are strictly directed.\\
 
+    \newpage
+    In this first part we analysed simplicial complexes as peculiar subsets of $\R^n$, namely \ii{geometric simplicial complexes}.
     Although this approach provides simplicial complexes with the topology inherited from the metric space, it hides the power of simplicial complexes 
     to describe those networks and interactions which would happily exist without that topology. To make this distinction clear enough we will treat
-    simplicial complexes as a realization of more abstract objects called abstract simplicial complexes. The discussion of abstract simplicial complexes
-    can be found in \cite{rotman}.
+    simplicial complexes as a realization of more abstract objects called \ii{abstract simplicial complexes}. The discussion of abstract simplicial complexes
+    can be found in \cite{rotman,comptop}.
     
     \begin{defn}
-        Let $\mc{V}$ be a finite set we define an \ii{abstract simplicial complex} $\mc{A}$ to be 
-        \[\mc{A}:=\{ \sigma  \subset \mc{V} : \tau \subset \sigma \then \tau \in \mc{A} \}\] 
-        where $\sigma$ are called \ii{abstract simplexes} of $\mc{A}$.
+        Let $\mc{V}$ be a finite set, we define an \ii{abstract simplicial complex} $\mc{A}$ to be 
+        a family of non empy subsets of $\mc{V}$ such that:
+        \begin{enumerate}[(i)]
+            \item if $v \in \mc{V}$, then $\{v\} \in \mc{A},$
+            \item if $\sigma \in \mc{A}$ and $\tau \subset \sigma$, then $\tau \in \mc{A}.$
+        \end{enumerate}
+        We call the member of this family \ii{abstract simplexes}.
     \end{defn}
     
     One calls $\mc{V}$ the \ii{vertex set} of $\mc{A}$ and denotes it by $Vert(\mc{A})$; since the vertex
     set is finite we expect every abstract simplex to be also finite, therefore we might use the notation $\sigma = \{ v_i \}_{i \in I_\sigma}$,
     which so far we consider invariant under arbitrary permutations of the finite index set $I_\sigma$.
-
+    
     \begin{defn}
-        Let $\mc{A}$ be an abstract simplicial complex we define its \ii{dimension} to be
-        \[ dim \mc{A} := max_{\sigma \in \mc{A}}(|\sigma|-1), \]
-        where by $|\sigma|$ we denote the cardinality of $\sigma$.
+        Let $\mc{A}$ be an abstract simplicial complex and $\mc{G}$ a geometric simplicial complex, if for all $\{x_i\}_{i \in I} \in \mc{A}$ also $[x_i]_{i \in I} \in \mc{G}$
+        we say that $\mc{G}$ is a \ii{geometric realization} of $\mc{A}$.
     \end{defn}
 
-    One calls an abstract simplex of dimension $p$ an \ii{abstract p-simplex}, according to our
-    definition the empy set is a $(-1)$-simplex. A \ii{graph} is a one dimensional abstract simplicial complex.
+    While every geometric simplicial complex can be thought as a geometric realization of an abstract simplicial complex, the existence of a geometric 
+    realization for an arbitrary abstract simplicial complex is not trivial at all.
+
+    \begin{thm}
+        \label{thm:2}
+        Let $\mc{A}$ be an $n$-dimensional abstract simplicial complex, then it admits a geometric realization in $\R^{2n+1}$.
+    \end{thm}
+
+    A proof of this theorem can be found in \cite{comptop}.\\
+    \hfill \\
+    Both for abstract and geometric simplicial complexes one can define maps called \ii{simplicial maps} in order to obtain a category (\ref{app:A}) whose
+    equivalences are called isomorphisms. The geometric realisation is unluckily not a functor on the whole category of abstract simplicial complexes due to the
+    limitation imposed by theorem \ref{thm:2}. Nevertheless, when they exist, the geometric realizations of isomorphic abstract simplicial complexes are theirselves isomorphic.\\
+    \hfill \\
+    In the following sections we shall use abstract simplicial complexes, which can be always thought geometrically in the appropriate euclidean space.
+    % Furthermore, the \ii{simplicial approximation theorem}, which can be found in \cite{singerthorpe,rotman,comptop}, allows us to define a functor from the category of 
+    % simplicial complexes and maps to that of topological spaces and contnuous functions. The preimage of a topological space via this functor is called its \ii{triangulation}.
+    % \hfill \\
+    % Similarly the triangulations of homeomorphic topological spaces are isomorphic.
+
+
 
     % \begin{defn}
     %     Let $\mc{A},\mc{B}$ be abstract simplicial complexes, then a \ii{simplicial map} $\phi : \mc{A} \to \mc{B}$ is a function 
