--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -114,8 +114,8 @@
     \begin{defn}
         We define a \ii{simplicial complex} $\mc{G}$ to be a collection of simplexes such that
         \begin{enumerate}[(i)]
-            \item if any simplex $ [\tau] \leq [\sigma], [\sigma] \in \mc{G}$ then $ [\tau] \in \mc{G}$,
-            \item if $ [\sigma], [\tau] \in \mc{G}$ then $[\sigma] \cap [\tau] \in \mc{G}$.
+            \item if any simplex $ [\tau] \leq [\sigma]$ and $[\sigma] \in \mc{G}$, then $ [\tau] \in \mc{G}$,
+            \item if $ [\sigma], [\tau] \in \mc{G}$, then $[\sigma] \cap [\tau] \in \mc{G}$.
         \end{enumerate}
     \end{defn}
 
