--- a/tesi/sections/1/2.tex
+++ b/tesi/sections/1/2.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
     An important field in algebraic topology is homology theory. We shall discuss homology theory to the extent
-    that allows us to define the laplacian operator on simplicial complexes, for further readings see \cite{hatcher}.
+    that allows us to define the laplacian operator on simplicial complexes, for supplementary readings see \cite{hatcher,singerthorpe}.
     First we want to equip our simplicial complexes with an orientation.
 
     \begin{defn}
