--- a/tesi/sections/1/4.tex
+++ b/tesi/sections/1/4.tex
@@ -40,6 +40,8 @@
         $\lambda_\sigma = \lambda^+_\sigma + \lambda^-_\sigma \geq 0$.
     \end{proof}
 
+    \newpage
+
     Another really interesting property that was first proven by Beno Eckmann in 1944, is that the kernel of the p-Laplacian
     is isomorphic to the p-homology group.
 
