--- a/tesi/sections/appendixA/main.tex
+++ b/tesi/sections/appendixA/main.tex
@@ -1,9 +1,9 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
 
-    The essential idea in algebraic topology is to convert problems about topological spaces and continuous functions into
-    problems about algebraic objects and their homomorphisms, this way one hopes to end up with an easier problem to solve. 
-    The language of category theory shall be our main tool to formally describe this conversion.
+    At the beginning of \autoref{ch:1} we mentioned that a relevant concept in algebriac topology is that of conversion form
+    structures where a problem cannot be solved to structures where the problem can be solved. Not all conversions are good ones,
+    we need the language of category theory to define the rules that make a conversion a good conversion, i.e. functoriality.
 
     \begin{defn}
         A \ii{category} $\bb{C}$ consists of three ingerdients:\\
@@ -49,9 +49,9 @@
 
     A category that will be used in the following section is the category of topological spaces and continuous functions.
 
-    \begin{thm}
+    \begin{prop}
         Topological spaces and continuous functions are a category \bb{Top}, whose equivalences are called homeomorphisms.
-    \end{thm}
+    \end{prop}
 
     Other examples of categories can be found in \cite{rotman}.
 
