--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -3,8 +3,8 @@
 \usepackage{newlfont}
 \usepackage{color}
 \textwidth=450pt\oddsidemargin=0pt
-%\usepackage[utf8]{inputenc}
-%\usepackage{fouriernc}
+\usepackage[utf8]{inputenc}
+\usepackage{fouriernc}
 \usepackage[T1]{fontenc}
 \usepackage{adjustbox}
 \usepackage[margin=2cm]{geometry}
@@ -78,7 +78,7 @@
         domains into human friendly equivalence classes. Although this approach has been successful in modern machine learning, it only deals with a really 
         small set of domains. The goal of geometric deep learning is to extend this method to data defined on manifolds and simplicial complexes.\\
         Convolution on euclidean domains is itself based on the translation invariance of such domains. In fact the convolution of a function $f : \R^n \to \R$,
-        with some filter $g:\R^n \to \R$ is $(f * g)(x) = \scal{f}{g \circ T^{-1}}_{L^2}$, where $T:\R^n \to \R^n$ is a translation represented by the vector $x$.
+        with some filter $g:\R^n \to \R$ is \[(f * g)(x) = \scal{f}{g \circ T^{-1}}_{L^2},\] where $T:\R^n \to \R^n$ is a translation represented by the vector $x$.
         Moreover, one could also consider such a convolution to be defined on the translation group itself, represented by some $\R^n$. 
         In the same way one can define a convolution on the group $(\Z,+)$ as $(a * b)_n = \sum_{i \in \Z}a_i b_{n-i}$.
         Such definitions of convolution operators are equivariant with respect to the action of the group they are defined upon.
@@ -88,23 +88,24 @@
     \newpage
     \pagenumbering{arabic}
     \begin{chapter}{Preliminaries on topology}
+        \label{ch:1}
         The essential idea in algebraic topology is to convert problems about topological spaces and continuous functions into
         problems about algebraic objects and their homomorphisms, this way one hopes to end up with an easier problem to solve. 
         \subfile{sections/1}
     \end{chapter}
-    \begin{chapter}{Simplicial Neural Networks}
-        \subfile{sections/2}
-    \end{chapter}
+    % \begin{chapter}{Simplicial Neural Networks}
+    %     \subfile{sections/2}
+    % \end{chapter}
     \begin{appendices}
         \begin{chapter}{Category Theory}
             \label{app:A}
             \subfile{sections/appendixA/main}
         \end{chapter}
-        \begin{chapter}{Construction of Simplicial Complexes from Point Clouds}
-            \label{app:B}
-            Cech, Alpha and Delauney complexes.
-            Nerve Theorem.
-        \end{chapter}
+        % \begin{chapter}{Construction of Simplicial Complexes from Point Clouds}
+        %     \label{app:B}
+        %     Cech, Alpha and Delauney complexes.
+        %     Nerve Theorem.
+        % \end{chapter}
     \end{appendices}
     \newpage
     \printbibliography[heading = bibintoc]
