--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -55,8 +55,8 @@
             This is true if $[\sigma]$ is convex and contains $\sigma$.
             The proof that it contains $\sigma$ is trivial. In fact for every vertex $x_j = \sum_{i \in I} \delta_{ij} x_i$,
             and $\sum_{i \in I}\delta_{ij} = 1$.\\
-            To prove that it is convex we chose two points $a = \sum_{i \in I} a_i x_i, b = \sum_{i \in I} b_i x_i$ where $a_i,b_i \geq 0 \forall i \in I$
-            and $\sum_{i \in I} a_i = \sum_{i \in I} b_i = 1$. For $t \in [0,1]$
+            To prove that it is convex we chose two points $a = \sum_{i \in I} a_i x_i, b = \sum_{i \in I} b_i x_i$ \\
+            where $a_i,b_i \geq 0 \forall i \in I$ and $\sum_{i \in I} a_i = \sum_{i \in I} b_i = 1$. For $t \in [0,1]$
             \[ ta+(1-t)b = t\sum_{i \in I} a_i x_i + (1-t) \sum_{i \in I} b_i x_i = \sum_{i \in I} (ta_i + (1-t)b_i)x_i.\]
             It follows that $ta_i + (1-t)b_i \geq 0$ and $\sum_{i \in I} (ta_i + (1-t)b_i) = t\sum_{i \in I}a_i + (1-t)\sum_{i \in I}b_i = 1$ for all $i \in I$,
             which proves our statement.
