--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -27,7 +27,11 @@
   year = 2010
 }
 
-
+@misc{gcnn,
+      title={Group Equivariant Convolutional Networks}, 
+      author={Taco S. Cohen and Max Welling},
+      year={2016}
+}
 
 @misc{simplicialNN,
     title = {Simplicial Neural Networks}, 
