--- a/tesi/sections/2/2.tex
+++ b/tesi/sections/2/2.tex
@@ -4,6 +4,7 @@
     \begin{defn}[convolution on a simplicial complex]
     \end{defn}
     \begin{defn}[heat equation on a simplicial complex]
+        % graphical representation of heat equation evolution on a graph
     \end{defn}
     \begin{defn}[pooling on a simplicial complex]
     \end{defn}
